Fix mobile layout: overflow hidden on banner, increase gaps, add padding

--- a/src/scss/base/_global.scss
+++ b/src/scss/base/_global.scss
@@ -1,7 +1,11 @@
 main {
     display: flex;
     flex-direction: column;
-    gap: 30px;
+    gap: 40px;
+
+    @include media-tablet {
+        gap: 60px;
+    }
 
     @include media-laptop {
         gap: 80px;
