--- a/src/scss/layout/_text-block.scss
+++ b/src/scss/layout/_text-block.scss
@@ -5,6 +5,7 @@
   font-weight: 500;
   gap: 20px;
   width: 100%;
+  padding: 20px 0;
 
   @include media-tablet {
     gap: 30px;
